# beek

./: .eslintignore  .eslintrc.js  .gitignore  670.js  731.js  Cargo.toml  README.md  index.html  main.js  main.js.LICENSE.txt  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml  deploy.yml
src/: interpreter.rs  language.rs  lib.rs  main.rs  repl.rs  wasm.rs
src/interpreter/: env.rs
src/language/: parser.rs
web/: index.html  index.js  style.css
