[package]
name = "beek"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2.0.0"
combine = "4.6.3"
itertools = "0.10.3"
rand = "0.8.4"
ryu = "1.0.9"
statrs = "0.15.0"
thiserror = "1.0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.53"
atty = "0.2.14"
dirs = "4.0.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
structopt = "0.3.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.4", features = ["js"] }
wasm-bindgen = "0.2.79"

[lib]
name = "libbeek"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "beek"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
